# william-prophets-cli

./: .README.MD  Cargo.toml  README.MD
src/: lib.rs  main.rs
tests/: prophets_cli.rs
