[package]
name = "prophetbots-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.19", features = ["derive"]}
mpl-token-metadata = "4.1.2"
reqwest = {version = "0.11", features = ["json", "blocking"]}
serde = {version = "1.0.210", features = ["derive"]}
solana-client = "2.0.13"
spl-token = "6.0.0"
tokio = {version = "1.40.0", features = ["full"]}
trust-dns-resolver = "0.23.2"
anyhow = "1.0"
confy = "0.6.1"
indicatif = "0.17"
